Refactor multi project