@@ -1,31 +1,47 @@
-/*
- * This build file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java Library project to get you started.
- * For more details take a look at the Java Libraries chapter in the Gradle
- * user guide available at https://docs.gradle.org/4.0/userguide/java_library_plugin.html
- */
-buildscript {
+subprojects {
+    group 'com.kakaocorp.kino'
+    version '1.0-SNAPSHOT'
+    apply plugin: 'java'
+
+    sourceCompatibility = 9
+
     repositories {
         mavenCentral()
+        maven { url "http://repo.daumkakao.io/content/groups/kakao-talkserver-group" }
+    }
+
+    dependencies {
+        testImplementation 'junit:junit:4.12'
+        compile 'org.reflections:reflections:0.9.11'
+    }
+
+    test{
+        jvmArgs '--illegal-access=deny'
     }
 }
 
-apply plugin: 'java'
 
-task runApplication(type: JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-
-    main = 'com.jess.di.Application'
-}
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:21.0'
-    testImplementation 'junit:junit:4.12'
-}
-
+//buildscript {
+//    repositories {
+//        mavenCentral()
+//    }
+//}
+//
+//apply plugin: 'java'
+//
+//task runApplication(type: JavaExec) {
+//    classpath = sourceSets.main.runtimeClasspath
+//
+//    main = 'com.jess.di.Application'
+//}
+//
+//repositories {
+//    mavenCentral()
+//}
+//
+//dependencies {
+//    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
+//    implementation 'com.google.guava:guava:21.0'
+//    testImplementation 'junit:junit:4.12'
+//}
+//
